<?xml version="1.0" encoding="utf-8"?>
<com.sothree.slidinguppanel.SlidingUpPanelLayout
    xmlns:sothree="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/panel_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom"
    sothree:umanoPanelHeight="68dp"
    sothree:umanoShadowHeight="4dp"
    android:fitsSystemWindows="true">

    <android.support.v4.widget.DrawerLayout
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include layout="@layout/fragment_container" />

        <FrameLayout
            android:id="@+id/content_frame"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                android:theme="@style/ThemeOverlay.AppCompat.ActionBar">
            </android.support.v7.widget.Toolbar>

        </FrameLayout>

        <android.support.design.widget.NavigationView
            android:id="@+id/nav_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:fitsSystemWindows="true"
            app:menu="@menu/drawer_view"
            app:headerLayout="@layout/nav_header"/>

    </android.support.v4.widget.DrawerLayout>

    <FrameLayout
        android:id="@+id/panel_big_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.CardView
                android:id="@+id/panel_tiny_container"
                sothree:cardBackgroundColor="@android:color/white"
                android:layout_width="match_parent"
                android:layout_height="68dp">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/panel_small_title"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="8dp"
                        android:layout_marginStart="8dp"
                        android:text="Test title"
                        android:textSize="22sp"
                        sothree:layout_constraintEnd_toStartOf="@id/panel_small_play_button"
                        sothree:layout_constraintHorizontal_bias="0.0"
                        sothree:layout_constraintStart_toStartOf="parent"
                        sothree:layout_constraintTop_toTopOf="parent" />

                    <Button
                        android:id="@+id/panel_small_play_button"
                        android:layout_width="46dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/ic_play_circle_outline_black_24dp"
                        android:gravity="center"
                        sothree:layout_constraintBottom_toBottomOf="parent"
                        sothree:layout_constraintEnd_toEndOf="parent"
                        sothree:layout_constraintTop_toTopOf="parent" />
                </android.support.constraint.ConstraintLayout>

            </android.support.v7.widget.CardView>

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.constraint.ConstraintLayout
                    android:id="@+id/duration_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    sothree:layout_constraintStart_toStartOf="parent"
                    sothree:layout_constraintEnd_toEndOf="parent"
                    sothree:layout_constraintTop_toBottomOf="@id/seek_bar"
                    sothree:layout_constraintBottom_toTopOf="@id/panel_big_button_constraint">

                    <android.support.constraint.Guideline
                        android:id="@+id/guideline25"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        sothree:layout_constraintGuide_percent=".5"/>

                    <TextView
                        android:id="@+id/seek_bar_max_duration"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        sothree:layout_constraintBottom_toBottomOf="parent"
                        sothree:layout_constraintStart_toEndOf="@id/guideline25"
                        sothree:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/seek_bar_current_duration"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:layout_marginTop="8dp"
                        sothree:layout_constraintBottom_toBottomOf="parent"
                        sothree:layout_constraintEnd_toStartOf="@id/guideline25"
                        sothree:layout_constraintTop_toTopOf="parent" />

                </android.support.constraint.ConstraintLayout>

                <ImageView
                    android:id="@+id/panel_episode_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:background="@android:drawable/dialog_holo_light_frame"
                    sothree:layout_constraintBottom_toTopOf="@id/panel_big_title"
                    sothree:layout_constraintEnd_toEndOf="parent"
                    sothree:layout_constraintStart_toStartOf="parent"
                    sothree:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/panel_big_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="2"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    sothree:layout_constraintEnd_toEndOf="parent"
                    sothree:layout_constraintBottom_toTopOf="@id/seek_bar"
                    sothree:layout_constraintStart_toStartOf="parent"
                    sothree:layout_constraintTop_toBottomOf="@id/panel_episode_image" />

                <android.support.v7.widget.AppCompatSeekBar
                    android:id="@+id/seek_bar"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    sothree:layout_constraintTop_toBottomOf="@id/panel_big_title"
                    sothree:layout_constraintBottom_toTopOf="@id/panel_big_button_constraint"
                    sothree:layout_constraintStart_toStartOf="parent"
                    sothree:layout_constraintEnd_toEndOf="parent" />

                <android.support.v7.widget.CardView
                    android:id="@+id/thumb_card"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:drawable/dialog_holo_light_frame"
                    android:layout_marginBottom="8dp"
                    sothree:layout_constraintBottom_toTopOf="@id/seek_bar">

                    <TextView
                        android:id="@+id/thumb_duration"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="center" />
                </android.support.v7.widget.CardView>

                <android.support.constraint.ConstraintLayout
                    android:id="@+id/panel_big_button_constraint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    sothree:layout_constraintTop_toBottomOf="@id/duration_layout"
                    sothree:layout_constraintStart_toStartOf="parent"
                    sothree:layout_constraintEnd_toEndOf="parent"
                    sothree:layout_constraintBottom_toBottomOf="parent">

                    <!--<android.support.constraint.Guideline-->
                        <!--android:id="@+id/guideline_big_buttons"-->
                        <!--android:layout_width="wrap_content"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:orientation="horizontal"-->
                        <!--sothree:layout_constraintGuide_percent=".5"/>-->

                    <Button
                        android:id="@+id/panel_large_play_button"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:background="@drawable/ic_pause_circle_outline_white_48dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        sothree:layout_constraintTop_toTopOf="parent"
                        sothree:layout_constraintStart_toStartOf="parent"
                        sothree:layout_constraintEnd_toEndOf="parent"
                        sothree:layout_constraintBottom_toBottomOf="parent"/>

                    <Button
                        android:id="@+id/forward_30"
                        android:layout_width="75dp"
                        android:layout_height="75dp"
                        android:background="@drawable/ic_forward_30_white_36dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        sothree:layout_constraintTop_toTopOf="parent"
                        sothree:layout_constraintBottom_toBottomOf="parent"
                        sothree:layout_constraintStart_toEndOf="@id/panel_large_play_button"/>

                    <Button
                        android:id="@+id/rewind_30"
                        android:layout_width="75dp"
                        android:layout_height="75dp"
                        android:background="@drawable/ic_replay_30_white_36dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        sothree:layout_constraintTop_toTopOf="parent"
                        sothree:layout_constraintBottom_toBottomOf="parent"
                        sothree:layout_constraintEnd_toStartOf="@id/panel_large_play_button"/>

                </android.support.constraint.ConstraintLayout>



            </android.support.constraint.ConstraintLayout>
        </android.support.constraint.ConstraintLayout>

    </FrameLayout>

</com.sothree.slidinguppanel.SlidingUpPanelLayout>
