<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/card_view"
    app:cardCornerRadius="4dp"
    app:cardElevation="3dp"
    android:layout_margin="5dp"
    android:clickable="true"
    android:focusable="true"
    android:background="?attr/selectableItemBackground"
    android:foreground="?attr/selectableItemBackground"
    style="@style/CardView">

    <android.support.constraint.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/card_view_constraint"
        android:clickable="true"
        android:focusable="true"
        android:background="?attr/selectableItemBackground"
        android:foreground="?attr/selectableItemBackground">

        <ImageView
...
