<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single" >
        <item
            android:id="@+id/nav_subscribed"
            android:icon="@drawable/ic_radio_black_24dp"
            android:title="@string/subscribed" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_search_white_24dp"
            android:title="@string/search" />
        <item
            android:id="@+id/nav_settings"
            android:title="@string/settings" />

        <item
            android:id="@+id/nav_about"
            android:title="@string/about" />
    </group>

    <!--Add new group and more items for settings and new releases etc-->


</menu>